# origin

./: .dockerignore  .gitignore  CLAUDE.md  README.md  Tiltfile  data.json  docker-compose.yml  migrate.sh  package-lock.json  package.json  test_auth_endpoints.js
.claude/: settings.local.json
.github/workflows/: rust.yml
backend/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  build.rs  migrate.sh  package-lock.json  package.json  proto.pb
backend/.cargo/: config.toml
backend/envoy/: Dockerfile  docker-entrypoint.sh  envoy.yaml  generate_proto_descriptor.sh  proto.pb
backend/infra/: .gitignore  NAMECHEAP_DNS_SETUP.md  main.tf  outputs.tf  parameters.tf  ses.tf  variables.tf
backend/migrations/: 20230501000000_initial_schema.sql  20250801000001_create_users_table.up.sql  20250803000001_create_otp_table.down.sql  20250803000001_create_otp_table.up.sql  20250829000001_create_users_table.up.sql  20250829000002_create_otps_table.up.sql  20250829000003_create_sessions_table.up.sql
backend/proto/: greeter.proto
backend/spec/: auth-otp-mvp.md
backend/src/: lib.rs  logging.rs  main.rs
backend/src/adapter/: claude_ai.rs  google_oauth.rs  jwt_service.rs  mod.rs  otp.rs  otp_service.rs  parameter_store.rs  plaid.rs  redis_cache.rs  ses.rs
backend/src/domains/user/: mod.rs
backend/src/domains/user/action/: mod.rs
backend/src/domains/user/fetch/: mod.rs
backend/src/handler/: accounts.rs  auth.rs  auth_old.rs  echo.rs  greeter.rs  mod.rs
backend/src/model/: auth.rs  database.rs  greeting.rs  mod.rs  otp.rs  session.rs  user.rs
backend/src/model/data/: user.rs
backend/src/repository/: mod.rs
backend/src/service/: greeter.rs  mod.rs
backend/tests/: integration_claude_ai.rs  integration_plaid.rs
data/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
data/postgres/pg_stat/: pgstat.stat
data/redis/: dump.rdb
frontend/: .dockerignore  .eslintrc.js  .gitignore  .npmrc  CLAUDE.md  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.storybook/: main.ts  preview.ts  preview.tsx
frontend/dist-storybook/: 159.323f786a.iframe.bundle.js  253.40968173.iframe.bundle.js  304.98613ca5.iframe.bundle.js  306.1716ec88.iframe.bundle.js  41.0994a42a.iframe.bundle.js  433.e7aeda01.iframe.bundle.js  473.20452daa.iframe.bundle.js  529.653ae932.iframe.bundle.js  768.5c5ab5f4.iframe.bundle.js  768.5c5ab5f4.iframe.bundle.js.map  813.34f300bb.iframe.bundle.js  847.26bc82ae.iframe.bundle.js  domain-greeter-components-GreeterExample-stories.1cc759ff.iframe.bundle.js  iframe.html  index.html  index.json  main.88511a62.iframe.bundle.js  main.bc4a0ba5.iframe.bundle.js  project.json  runtime~main.c4e5ea2e.iframe.bundle.js  runtime~main.e4c18472.iframe.bundle.js  stories-Button-stories-tsx.bacc0217.iframe.bundle.js  stories-Button-stories-tsx.e73847b1.iframe.bundle.js  stories-Button-stories.dd847259.iframe.bundle.js  stories-Card-stories.cc489e89.iframe.bundle.js  stories-Card-stories.d8bd8f14.iframe.bundle.js  stories-Chip-stories.128a1e1a.iframe.bundle.js  stories-ColorPalette-stories.bcdad053.iframe.bundle.js  stories-Configure-mdx.22650057.iframe.bundle.js  stories-Header-stories.92065935.iframe.bundle.js  stories-Input-stories.5d6e1f71.iframe.bundle.js  stories-Input-stories.71bec1d1.iframe.bundle.js  stories-Page-stories.68f79da3.iframe.bundle.js  stories-Slider-stories.71202669.iframe.bundle.js  stories-Stack-stories.b74bf422.iframe.bundle.js  stories-StyleChooser-stories.39d994e5.iframe.bundle.js  stories-StyleChooser-stories.b3a6064c.iframe.bundle.js  stories-Switch-stories.e806eb58.iframe.bundle.js  stories-Tag-stories.1f3268c6.iframe.bundle.js  stories-Text-stories.b8aa7a25.iframe.bundle.js
frontend/src/components/: index.ts
frontend/src/domain/: README.md  index.ts
frontend/src/pages/: _app.tsx  _document.tsx  auth.tsx  dashboard.tsx  index.tsx
frontend/src/stories/: AuthErrorMessage.stories.tsx  AuthLoadingSpinner.stories.tsx  Button.stories.tsx  Card.stories.tsx  Chip.stories.tsx  ColorPalette.stories.tsx  GoogleLoginButton.stories.tsx  Input.stories.tsx  LogoutButton.stories.tsx  Slider.stories.tsx  Stack.stories.tsx  StyleChooser.stories.tsx  Switch.stories.tsx  Tag.stories.tsx  Text.stories.tsx  UserProfile.stories.tsx
frontend/src/styles/: Auth.css.ts  Home.css.ts  ThemeContext.tsx  (+7 more)
frontend/types/: protobufjs.d.ts
product/: product.md  roadmap.md
product/MVP/: auth-onboarding-prd.md  dashboard-reporting-prd.md  invoice-management-prd.md  mvp-overview.md  plaid-integration-prd.md  transaction-categorization-prd.md
proto/: accounts.proto  auth.proto  greeter.proto
pulumi/: Pulumi.dev.yaml  Pulumi.originlab.yaml  Pulumi.yaml  README.md  deploy-local.sh  go.mod  go.sum  main.go
terraform/: main.tf  variables.tf
(+257 files in other folders)
