[package]
name = "template"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3.30"
async-trait = "0.1.77"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
jsonwebtoken = "8.3.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", features = ["json"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
argon2 = "0.5.2"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.11.0"
